--- a/conf/config.yaml
+++ b/conf/config.yaml
@@ -1,7 +1,7 @@
-setup_mlflow: true
+setup_mlflow: false
 mlflow_autolog: false
-mlflow_tracking_uri: "https://mlflow.aiap19.aisingapore.net"
-mlflow_exp_name: "isaacb_kam_jk_cv-presentation"
+mlflow_tracking_uri: "http://localhost:5000"
+mlflow_exp_name: "brian_cv"
 # mlflow_run_name: "densenet121-test-adamw"
 resume: false
 mlflow_run_name: "vit_b_16" 
